<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
                                             android:background="@color/weather_background"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:layout_editor_absoluteY="25dp"
                                             tools:layout_editor_absoluteX="0dp">
    <TextView
        android:id="@+id/topTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_title"
        style="@style/WeatherfontMiddle"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="28dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="23dp"
        app:srcCompat="@drawable/ic_sad"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/currentTemptyreView"
        app:layout_constraintRight_toRightOf="@+id/weatherDescribeView"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="35dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="29dp"/>

    <TextView
        android:id="@+id/tempatureDetailsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/WeatherfontSmall"
        android:text="@string/temperature_details"
        android:layout_marginStart="5dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/weatherIconImageView"
        app:layout_constraintLeft_toRightOf="@+id/weatherIconImageView"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/windPowerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windPower"
        style="@style/WeatherfontSmall"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/windRangeView"
        android:layout_marginStart="5dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toRightOf="@+id/weatherIconImageView"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/windRangeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windRange"
        style="@style/WeatherfontSmall"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/weatherDescribeView"
        android:layout_marginStart="5dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/weatherIconImageView"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/weatherDescribeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherDescribe"
        style="@style/WeatherfontSmall"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/AqiView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/AqiView"/>

    <TextView
        android:id="@+id/currentTemptyreView"
        style="@style/WeatherfontBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentTempatute"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/AqiView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"/>

    <TextView
        android:id="@+id/AqiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentAqi"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="53dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="58dp"/>


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="16dp"
        android:text="@string/refresh_message"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintRight_toLeftOf="@+id/moreInfoBtn"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="72dp"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="36dp"
        android:layout_height="0dp"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="78dp"
        android:background="@drawable/round_click"
        app:srcCompat="@drawable/ic_refresh"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/topTitleView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="9dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="78dp"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/currentTemptyreView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">

        <LinearLayout
            android:id="@+id/linearView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/moreInfoBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/round_click"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>


</android.support.constraint.ConstraintLayout>